Fix spacing for service cards

--- a/less/main.less
+++ b/less/main.less
@@ -15,6 +15,7 @@ h3 {
 h5 {
     font-family: @body;
     font-weight: @extrabold;
+    color: @blackblue;
 }
 
 p {
@@ -82,9 +83,12 @@ p {
 // Subpages - Grooming
 main {
     padding: @pad-sm 0;
+    a {
+        .links();
+    }
     .service-card {
         .cards();
-        margin: auto;
+        margin: 0 auto @pad-sm;
         h3 {
             text-align: @center;
         }
